--- a/sources/pharmacy_delivery/pubspec.yaml
+++ b/sources/pharmacy_delivery/pubspec.yaml
@@ -56,9 +56,9 @@ dependencies:
   flutter_stripe: ^1.3.0
 
   firebase_auth: ^3.1.3
-  cloud_firestore: ^2.5.0
   firebase_messaging: ^10.0.8
   flutter_local_notifications: ^9.0.0
+  cloud_firestore: 3.0.0
 
 
 flutter_icons:
